# pycrown_simplified

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  cmd_commands.txt  environment.yaml  pycrown_test.py  pyproject.toml  setup.py
.spyproject/config/: workspace.ini
pycrown/: __init__.py  _crown_dalponteCIRC_numba.py  _crown_dalponte_numba.py  _crown_hierarchical_region_growing.py  io_utils.py  pycrown.py
pycrown_simplified.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_data/results/: chm_11_2013.tif_crowns.gpkg  chm_11_2013.tif_crowns.vrt  chm_11_2013.tif_treetops.gpkg  chm_42_2014.tif_crowns.gpkg  chm_42_2014.tif_crowns.vrt  chm_42_2014.tif_treetops.gpkg
tests/: test_pycrown.py
