[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pycrown-simplified"
version = "0.1.0"
description = "Individual tree crown segmentation from CHM"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Igor Pawelec", email = "igor.pawelec@student.urk.edu.pl" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.20",
    "rasterio>=1.3",
    "numba>=0.60",
    "fiona>=1.9",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/igorpawelec/pycrown_simplified"
Repository = "https://github.com/igorpawelec/pycrown_simplified"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
]
